# vk_exp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: common.glsl  random.glsl  shadow.rchit  shadow.rmiss  simple.frag  simple.rchit  simple.rgen  simple.rmiss  simple.vert  sphere.rahit  sphere.rchit  sphere.rint
src/: main.cpp  materials.hpp  model.cpp  model.h  orbit_camera.cpp  orbit_camera.h  shader_dir.h.in  stb_image.h  tiny_obj_loader.cpp  vertex.h  vma.cpp  vma.h
